--- a/style/appointment.css
+++ b/style/appointment.css
@@ -4,13 +4,14 @@
   align-items: center;
   min-height: 100vh;
   width: 100%;
-  padding: 20px;
+  padding: -20px;
+  margin-bottom:40px ;
 }
 /* Form container */
 .container {
   display: flex;
   background-color: rgb(239, 221, 221);
-  padding: 40px;
+  padding: 0px 40px ;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   width: 100%;
@@ -23,8 +24,9 @@
     min-height: 100vh;
     width: 100%;
     padding: 20px;
-    margin-top: 80px;
+    
 }
+
 
 /* Form styling */
 form {
@@ -58,6 +60,7 @@ input, textarea {
     border-radius: 5px;
     cursor: pointer;
     font-size: 16px;
+    width: 104%;
     transition: background-color 0.3s;
 }
 
@@ -71,7 +74,7 @@ textarea {
 
 .headi{
   margin-top: 5vh;
-  margin-bottom: 7vh;
+  margin-bottom: 3vh;
 }
 
 /* Responsive styling */
